@@ -4,7 +4,10 @@
 	profiler tool debugging utilities.
 
 	* IgProfFileDesc.cc, IgProfPerf.cc: Use them.
-	
+
+	* IgProfMem.cc: Use them.  Allow remove() to be called on
+	objects whose creation we didn't track.
+
 2004-05-12  Lassi A. Tuura  <lat@iki.fi>
 
 	* igprof-analyse: Fix dump reading bugs.  Take into account key
